# linkjumper

./: .gitignore  README.md  cli.py  config.json  install.sh  pyproject.toml  redirects.json  server.py  start.sh  teardown.sh  uninstall.sh
linkjumper/: __init__.py  __main__.py  browsers.py  certs.py  cli.py  config.py  server.py  system.py  webloc.py
tests/: conftest.py  test_browsers.py  test_certs.py  test_cli.py  test_config.py  test_server.py  test_system.py  test_webloc.py
