[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linkjumper"
version = "1.0.0"
description = "Local URL shortener for macOS"
requires-python = ">=3.9"

[project.scripts]
linkjumper = "linkjumper.cli:main"
linkj = "linkjumper.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
